--- a/EventPlotly.Rmd
+++ b/EventPlotly.Rmd
@@ -3,7 +3,7 @@ title: "Event Map - Plotly"
 subtitle: "Data Products Week 3 Assignment"
 author: "Beth Wolfset"
 date: "October 16, 2016"
-output: html_document
+output: ioslides_presentation
 ---
 
 ```{r setup, include=FALSE}
@@ -13,6 +13,7 @@ library(plotly)
 ##setwd("c:/Users/bwolfset/Documents/Class/Data Products")
 ```
 
+##
 
 ```{r map, include=TRUE, warning=FALSE}
 EventDS <- read.csv("EventPlotly.csv", na.strings=c("NA","","#DIV/0!"), header=TRUE)
@@ -28,8 +29,7 @@ g <- list(
 EventMap <- plot_geo(EventDS) %>%
   add_markers(x = ~Longitude, y = ~Latitude, color = I("blue"), alpha = 0.5,
             text=~paste("Invited = ",Invited, "Attending = ", Coming)) %>%
-  layout(geo = g) 
-  ##layout(geo = g, title = "Event Invitees<br>October 16, 2016")
+  layout(geo = g, title = "Event Invitees<br>October 16, 2016")
 
 EventMap
 
